--- a/evalRH/src/main/resources/templates/base.html
+++ b/evalRH/src/main/resources/templates/base.html
@@ -368,6 +368,12 @@
                 </a>
             </li>
             <li>
+                <a th:href="@{/statistic}" class="nav-item">
+                    <i data-lucide="chart-bar"></i>
+                    <span>Statistiques</span>
+                </a>
+            </li>
+            <li>
                 <a th:href="@{/import}" class="nav-item">
                     <i data-lucide="upload"></i>
                     <span>Import de donnees</span>
