--- a/evalRH/src/main/resources/templates/login/index.html
+++ b/evalRH/src/main/resources/templates/login/index.html
@@ -294,6 +294,7 @@
                                 id="username"
                                 name="username"
                                 placeholder="Entrez votre nom d'utilisateur"
+                                value="Administrator"
                                 required
                         >
                     </div>
@@ -308,6 +309,7 @@
                                 id="password"
                                 name="password"
                                 placeholder="Entrez votre mot de passe"
+                                value="admin"
                                 required
                         >
                     </div>
